--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,6 +1,28 @@
 body
 {
-    color: deeppink;
+    color: rgba(0, 0, 0, 0.2);
     text-align: center;
     font-family: "Arial";
+    font-size: 16px;
+    margin: 0;
+    padding: 0;
+}
+
+#container
+{
+    width: 70%;
+    padding: 1em;
+    text-align: left;
+    border: 1px solid rgb(22, 20, 20);
+    margin: 0 auto;
+}
+
+#post
+{
+    color:forestgreen
+}
+
+#container h1
+{
+    font-size: 20px;
 }
