--- a/css/estilos.css
+++ b/css/estilos.css
@@ -8,6 +8,15 @@ body
     padding: 0;
 }
 
+#cabecera
+{
+    background: #33A;
+    color: white;
+    margin: 0;
+    padding: 0.5em;
+
+}
+
 #container
 {
     width: 70%;
