--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,6 +1,6 @@
 body
 {
-    color: rgba(0, 0, 0, 0.2);
+    color: blue;
     text-align: center;
     font-family: "Courier";
     font-size: 16px;
